Chapter 4: Add a full_title helper

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,12 +1,5 @@
-<% provide(:title, ".about") %>
+<% provide(:title, t(".about")) %>
 <h1><%= t ".about"%></h1>
 <p>
-  <%
-  ruby_link = link_to t(".ruby"), "http://www.railstutorial.org/"
-  book_link = link_to t(".book"), "http://www.railstutorial.org/book"
-  ss_link = link_to t(".ss"), "http://screencasts.railstutorial.org/"
-  rubyonrails_link = link_to t(".rubyonrails"), "http://www.railstutorial.org/"
-  %>
-  <%= raw t(".up", ruby_link: ruby_link, book_link: book_link, ss_link: ss_link,
-    rubyonrails_link: rubyonrails_link)%>
+  <%= raw t(".up")%>
 </p>
