--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,9 +1,5 @@
-<% provide(:title, ".help") %>
+<% provide(:title, t(".help")) %>
 <h1><%= t ".help"%></h1>
 <p>
-  <%
-  rails_link = link_to t(".rails"), "http://www.railstutorial.org/help"
-  ruby_link = link_to t(".ruby"), "http://www.railstutorial.org/book"
-  %>
-  <%= raw t(".up", rails_link: rails_link, ruby_link: ruby_link)%>
+  <%= raw t(".up")%>
 </p>
