--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,6 +1,5 @@
-<% provide(:title, ".contact") %>
+<% provide(:title, t(".contact")) %>
 <h1><%= t ".contact"%></h1>
 <p>
-  Contact the Ruby on Rails Tutorial about the sample app at the
-  <a href="http://www.railstutorial.org/contact"><%= t ".contactpage"%></a>.
+  <%= raw t(".up")%>
 </p>
