--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,11 +1,11 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
-    <%= link_to t(".name"), root_path, id: "logo" %>
+    <%= link_to t("name"), root_path, id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to t("static_pages.home.home"), root_path %></li>
         <li><%= link_to t("static_pages.help.help"), help_path %></li>
-        <li><%= link_to t(".login"), '#' %></li>
+        <li><%= link_to t("layouts.header.login"), "#" %></li>
       </ul>
     </nav>
   </div>
