--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,9 @@
-<% provide(:title, t(".home")) %>
-<h1><%= t ".sample"%></h1>
-<p>
-  <%= raw t(".up")%>
-</p>
+<div class="center jumbotron">
+  <h1><%= t(".sample") %></h1>
+  <h2>
+    <%= raw t(".up") %>
+  </h2>
+  <%= link_to t(".sign_up"), signup_path, class: "btn btn-lg btn-primary" %>
+</div>
+<%= link_to image_tag("rails.png", alt: t(".rails_logo")),
+    "http://rubyonrails.org/" %>
