--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,24 @@
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to t("static_pages.home.home"), root_path %></li>
         <li><%= link_to t("static_pages.help.help"), help_path %></li>
-        <li><%= link_to t("layouts.header.login"), "#" %></li>
+        <% if logged_in? %>
+          <li><%= link_to t("layouts.header.users"), "#" %></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              Account <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to t("layouts.header.profile"), current_user %></li>
+              <li><%= link_to t("layouts.header.settings"), "#" %></li>
+              <li class="divider"></li>
+              <li>
+                <%= link_to t("layouts.header.log_out"), logout_path, method: :delete %>
+              </li>
+            </ul>
+          </li>
+        <% else %>
+          <li><%= link_to t("layouts.header.log_in"), login_path %></li>
+        <% end %>
       </ul>
     </nav>
   </div>
