--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,9 +1,9 @@
 <div class="center jumbotron">
-  <h1><%= t(".sample") %></h1>
+  <h1><%= t".sample" %></h1>
   <h2>
     <%= raw t(".up") %>
   </h2>
   <%= link_to t(".sign_up"), signup_path, class: "btn btn-lg btn-primary" %>
-</div>
+</div>  
 <%= link_to image_tag("rails.png", alt: t(".rails_logo")),
-    "http://rubyonrails.org/" %>
+  "http://rubyonrails.org/" %>
