--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, t(".sign_up")) %>
-<h1><%= t(".sign_up") %></h1>
+<h1><%= t".sign_up" %></h1>
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
