--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,14 +6,14 @@
         <li><%= link_to t("static_pages.home.home"), root_path %></li>
         <li><%= link_to t("static_pages.help.help"), help_path %></li>
         <% if logged_in? %>
-          <li><%= link_to t("layouts.header.users"), "#" %></li>
+          <li><%= link_to t("layouts.header.users"), users_path %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               <%= t("layouts.header.account") %> <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
               <li><%= link_to t("layouts.header.profile"), current_user %></li>
-              <li><%= link_to t("layouts.header.settings"), "#" %></li>
+              <li><%= link_to t("layouts.header.settings"), edit_user_path(current_user) %></li>
               <li class="divider"></li>
               <li>
                 <%= link_to t("layouts.header.log_out"), logout_path, method: :delete %>
